# path_embedding

./: .copier-answers.yml  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  justfile  mkdocs.yml  mypy.ini  pyproject.toml  sitemap.xml
.github/: ai-controllers.json
.github/workflows/: ai.yml  test_pages_build.yaml
about/: index.html
data/: README.md
docs/: about.md  index.md  usage.md
docs/plans/: 2025-11-10-path-embedding-classifier-design.md  2025-11-10-path-embedding-implementation.md  2025-11-11-hard-negatives-design.md
examples/: README.md
models/: README.md
notebooks/: evaluation_summary.ipynb  hard_negatives_experiment.ipynb  hard_negatives_experiment_executed.ipynb  model_validation.ipynb
plans/2025-11-10-path-embedding-classifier-design/: index.html
pr-preview/pr-1/: sitemap.xml
pr-preview/pr-2/: index.html
pr-preview/pr-7/: sitemap.xml
project/: README.md
results/: deep_research_evaluation_summary.csv  evaluation_for_google_sheets.csv  hard_negatives_results.json
results/deep_research/: bottom_01_rank9999_Imatinib_asthma.md  bottom_02_rank9986_Naltrexone_Hailey-Hailey_disease.md  bottom_03_rank9952_Fluoxetine_long_COVID-19.md  bottom_04_rank9952_Clofibrate_metabolic_dysfunction-associated_steatotic_liver_disease.md  bottom_05_rank9295_acetylsalicylate_colorectal_cancer.md  results_deep_research_bottom_01_rank10000_Sildenafil_Alzheimer_disease.md  results_deep_research_bottom_02_rank9999_Imatinib_asthma.md  results_deep_research_bottom_03_rank9998_Imatinib_asthma.md  results_deep_research_top_01_rank0001_Sorafenib_liver_carcinoma.md  results_deep_research_top_03_rank0003_Sorafenib_liver_carcinoma.md  top_01_rank0001_Sorafenib_liver_carcinoma.md  top_02_rank0004_Olaparib_ovarian_cancer.md  top_03_rank0016_Warfarin_cancer.md  top_04_rank0019_Icosapent_atherosclerosis.md  top_05_rank0073_Sildenafil_Alzheimer_disease.md
scripts/: cross_validation.py  retry_clofibrate.py  run_deep_research_eval.py  run_hard_negatives_experiment.py
src/path_embedding/: __init__.py  cli.py
tests/: __init__.py  test_classifier.py  test_cli.py  test_data_split.py  test_drugmechdb.py  test_evaluation.py  test_kgx.py  test_negative_sampling.py  test_openai_embedder.py  test_path_extraction.py  test_text_formatter.py  test_types.py
usage/: index.html
(+16 files in other folders)
